edit to comments on dashboard show

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,19 +3,19 @@
   <%@mentors_data.each do |mentor|%>
     <h3><%=mentor.user_id%></h3>
   <%end%>
-  <!-- Mentor Partial View-->
+  <!-- Mentor Partial Views Here-->
 <% elsif @role == 'Mentee' %>
   <h1>Welcome, Mentee!</h1>
   <%@mentees_data.each do |mentee|%>
     <h3><%=mentee.user_id%></h3>
   <%end%>
-  <!-- Mentee Partial View-->
+  <!-- Mentee Partial Views Here-->
 <% elsif @role == 'Admin' %>
   <h1>Welcome, Admin!</h1>
   <%@admins_data.each do |admin|%>
     <h3><%=admin.user_id%></h3>
   <%end%>
-  <!-- Admin Partial View-->
+  <!-- Admin Partial Views Here-->
 <% else %>
   <h1>Role not recognized.</h1>
 <% end %>
