--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+    <div class="container">
+      <div class="row mb-2">
+          <% if notice.present? %>
+            <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+          <% end %>
+          <% if alert.present? %>
+            <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+          <% end %>
+      </div>  
     <%= yield %>
+    </div>
   </body>
 </html>
