--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,4 +1,3 @@
-<h1>Profile</h1>
 <%@user.each do |user|%>
-    <h3><%=user.first_name%> <%=user.id%></h3>
-<%end%>    
+    <%= render 'profile', user: user %>
+<%end%>
