--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -1,11 +1,11 @@
 <h1 class="text-2xl font-semibold text-[#202020] mb-1">
   Mentor Profile
 </h1>
-<p class="text-sm text-[#898989] mb-2">Discover insights and stories from our mentors and mentees to inspire your own
+<p class="text-sm text-[#898989] mb-5">Discover insights and stories from our mentors and mentees to inspire your own
   journey.</p>
 
 <!--top profile card-->
-<div class="bg-[#FFFFFF] flex gap-5 py-5 border-slate-300 rounded-lg px-5 w-895px h-171px">
+<div class="bg-[#FFFFFF] flex gap-5 py-5 border-slate-300 rounded-lg px-5 w-895px h-171px mb-3">
   <div>
     <!--    <img src=<%#= user.profile_picture %> alt="user_profile_picture" class="w-24 h-24 object-cover rounded-lg border">-->
     <img src=<%= asset_path('sample_img/mentor_sample.png') %> alt="user_profile_picture" class="w-24 h-24 object-cover rounded-lg border">
@@ -27,6 +27,34 @@
         <div class="flex gap-1">
           <img src="<%= asset_path('icon/mail.svg') %>" alt="mail" class="max-w-13 max-h-14">
           <p class="text-xs text-[#202020]"><a href="mailto:<%= user.email %>"><%= user.email %></a></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--bottom profile card-->
+<div class="grid grid-cols-1 gap-1.5 sm:grid-cols-[2fr_1fr] sm:gap-3 w-895px">
+<!--  about-->
+  <div class="bg-[#FFFFFF] flex flex-col space-y-4 py-5 border-slate-300 rounded-lg px-5 mb-2">
+    <b class="text-lg text-[#202020] font-bold">About Mentor</b>
+    <p class="text-xs text-[#202020]"><%= user.bio %></p>
+  </div>
+  <div class="flex flex-col gap-3">
+    <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
+      <b class="text-lg text-[#202020] font-bold">Skills</b>
+      <div class="flex gap-1.5">
+        <% user.skills_array.each do |skill| %>
+          <p class="text-xs text-[#202020] bg-[#EEF6F8] rounded-md py-0.5 px-1"><%= skill %></p>
+        <% end %>
+      </div>
+    </div>
+    <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5 mb-2">
+      <b class="text-lg text-[#202020] font-bold">Mentee Capacity</b>
+      <div>
+        <div class="flex gap-1 mb-2">
+          <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
+<!--          TODO: cohort_members.capacity-->
+          <p class="text-xs text-[#202020]">2 mentees</p>
         </div>
       </div>
     </div>
