feat: bottom profile card

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -54,7 +54,7 @@
         <div class="flex gap-1 mb-2">
           <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
 <!--          TODO: cohort_members.capacity-->
-          <p class="text-xs text-[#202020]">2 mentees</p>
+          <p class="text-xs text-[#202020]"><b>2</b> mentees</p>
         </div>
       </div>
     </div>
