--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -35,9 +35,10 @@
 <!--bottom profile card-->
 <div class="grid grid-cols-1 gap-1.5 sm:grid-cols-[2fr_1fr] sm:gap-3 w-895px">
 <!--  about-->
-  <div class="bg-[#FFFFFF] flex flex-col space-y-4 py-5 border-slate-300 rounded-lg px-5 mb-2">
+  <div class="bg-[#FFFFFF] flex flex-col justify-start space-y-4 py-5 border-slate-300 rounded-lg px-5 mb-2 h-full">
     <b class="text-lg text-[#202020] font-bold">About Mentor</b>
-    <p class="text-xs text-[#202020]"><%= user.bio %></p>
+    <p class="text-xs text-[#202020] flex-grow"><%= user.bio %></p>
+    <button class="text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]">Mentorship Request</button>
   </div>
   <div class="flex flex-col gap-3">
     <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
