--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,11 +52,7 @@ body {
    
 }
 
-.hero-section {
-    width: 800px;
-    height: 400px;
-    position: relative;
-}
+
 .hero-title{
     font-size: 45px;
     font-weight: 300;
@@ -65,14 +61,14 @@ body {
 }
 
 
-.blob {
+.gradient {
     position: absolute;
     border-radius: 50%;
     filter: blur(153.61px); 
     overflow:hidden
 }
 
-.blob1 {
+.gradient-left {
     width: 623.987px;
     height: 343.018px;
     background: linear-gradient(270deg, rgba(245, 215, 252, 0.80) 0%, rgba(247, 209, 204, 0.80) 45%, rgba(247, 208, 197, 0.80) 57.5%, rgba(255, 185, 18, 0.80) 100%);
@@ -83,7 +79,7 @@ body {
     z-index: -1;
 }
 
-.blob2 {
+.gradient-right {
     width: 584.583px;
     height: 268.761px;
     background: linear-gradient(90deg, rgba(148, 3, 253, 0.50) 0%, rgba(0, 173, 254, 0.50) 100%);
@@ -108,8 +104,9 @@ body {
 
 .swiper-button-next svg,
 .swiper-button-prev svg {
-    width: 24px !important;
-    height: 24px !important;
+    width: 40px !important;
+    height: 40px !important;
+    
 }
 
 .swiper-button-next,
