added switching for stimulus controllers

--- a/app/views/home/_mentee_form.html.erb
+++ b/app/views/home/_mentee_form.html.erb
@@ -1,5 +1,6 @@
 <div>
   <div>
+    <h3>Mentee</h3>
     <%= form_with model: @user do |form| %>
       <div class="subForm">
         <div><%= form.label :email %></div>
