added submit button to signup forms

--- a/app/views/home/_mentee_form.html.erb
+++ b/app/views/home/_mentee_form.html.erb
@@ -50,6 +50,9 @@
         <div><%= form.label :skills_array, "Please enter the skills you'd like to learn or improve, separated by commas." %></div>
         <div><%= form.text_field :skills_array %></div>
       </div>
+      <div class="subForm">
+        <div><%= form.submit %></div>
+      </div>
     <% end %>
   </div>
 </div>
