added spacing to subForm class in css file

--- a/app/views/home/_mentee_form.html.erb
+++ b/app/views/home/_mentee_form.html.erb
@@ -51,7 +51,7 @@
         <div><%= form.text_field :skills_array %></div>
       </div>
       <div class="subForm">
-        <div><%= form.submit %></div>
+        <div><%= form.submit "Sign Up" %></div>
       </div>
     <% end %>
   </div>
