--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,8 +1,11 @@
 <h1>Profile</h1>
 <%@user.each do |user|%>
     <h3><%=user.first_name%> <%=user.id%></h3>
-    <button class="text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md 
-                    py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]">
-        Mentorship Request
-    </button>
+    <h3><%=@current_mentee_count%>/<%=@capacity_cap%></h3>
+    <%= button_to 'Mentorship Request', create_request_profile_path(user.id),
+        class: "text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md 
+                py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]",
+        method: :post %>
+
+    
 <%end%>    
