fix: TODO position

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -19,7 +19,7 @@
           <img src="<%= asset_path('icon/office.svg') %>" alt="office" class="max-w-15 max-h-15">
           <p class="text-xs text-[#202020]">Discovery Partners Institute</p>
         </div>
-        <!--      <p><%#= user.company %></p> TODO-->
+        <!-- TODO <p><%#= user.company %></p> -->
         <div class="grid grid-cols-1 gap-1.5 sm:grid-cols-2 sm:gap-4">
           <div class="flex gap-1">
             <img src="<%= asset_path('icon/LinkedIn.svg') %>" alt="LinkedIn" class="max-w-15 max-h-15">
@@ -55,7 +55,7 @@
         <div>
           <div class="flex gap-1 mb-2">
             <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
-            <!--          TODO: cohort_members.capacity-->
+            <!-- TODO: cohort_members.capacity-->
             <p class="text-xs text-[#202020]"><b>2</b> mentees</p>
           </div>
         </div>
