--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -1,6 +1,10 @@
 <section class="p-5">
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">
-    Mentor Profile
+    <% if @role == "Mentor" %>
+      Mentor Profile
+    <% elsif @role == "Mentee" %>
+      Mentee Profile
+    <%end%>
   </h1>
   <p class="text-sm text-[#898989] mb-5">Discover insights and stories from our mentors and mentees to inspire your own
     journey.</p>
@@ -37,9 +41,20 @@
   <div class="grid grid-cols-1 gap-1.5 sm:grid-cols-[2fr_1fr] sm:gap-3 w-895px">
     <!--  about-->
     <div class="bg-[#FFFFFF] flex flex-col justify-start space-y-4 py-5 border-slate-300 rounded-lg px-5 mb-2 h-full">
-      <b class="text-lg text-[#202020] font-bold">About Mentor</b>
+      <b class="text-lg text-[#202020] font-bold">
+        <% if @role == "Mentor" %>
+          About Mentor
+        <% elsif @role == "Mentee" %>
+          About Mentee
+        <%end%>
+      </b>
       <p class="text-xs text-[#202020] flex-grow"><%= user.bio %></p>
-      <button class="text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]">Mentorship Request</button>
+      <% if @role == "Mentor" %>
+        <%= button_to 'Mentorship Request', create_request_profile_path(user.id),
+          class: "text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md 
+                  py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]",
+          method: :post %>
+      <%end%>    
     </div>
     <div class="flex flex-col gap-3">
       <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
@@ -50,16 +65,18 @@
           <% end %>
         </div>
       </div>
-      <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
-        <b class="text-lg text-[#202020] font-bold">Mentee Capacity</b>
-        <div>
-          <div class="flex gap-1 mb-2">
-            <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
-            <!-- TODO: cohort_members.capacity-->
-            <p class="text-xs text-[#202020]"><b>2</b> mentees</p>
+      <% if @role == "Mentor" %>
+        <div class="bg-[#FFFFFF] flex-col space-y-3 py-5 border-slate-300 rounded-lg px-5">
+          <b class="text-lg text-[#202020] font-bold">Mentee Capacity</b>
+          <div>
+            <div class="flex gap-1 mb-2">
+              <img src="<%= asset_path('icon/users.svg') %>" alt="office" class="max-w-15 max-h-15">
+              <!-- TODO: cohort_members.capacity-->
+              <p class="text-xs text-[#202020]"><b><%=@current_mentee_count%>/<%=@capacity_cap%></b> mentees</p>
+            </div>
           </div>
         </div>
-      </div>
+      <%end%>
     </div>
   </div>
 
