Created render for partial view: mentor_list

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -8,6 +8,7 @@
   <%@mentees_data.each do |mentee|%>
     <h3><%=mentee.user_id%></h3>
   <%end%>
+  <%= render partial: "shared/mentor_list", locals: {mentors_data: @mentors_data}%>
   <!-- Mentee Partial Views Here-->
 <% elsif @role == 'admin' %>
   <h1>Welcome, Admin!</h1>
