added some tailwind utility classes to the navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,16 @@
-<nav>
-    <div>test1</div>
-    <div>test2</div>
-    <div>test3</div>
+<nav class="flex flex-wrap items-center justify-between px-24 bg-[#FFFFFF] h-[72px] text-base text-[#000000] font-medium shadow-sm">
+    <div>
+        Logo
+    </div>
+    <div>
+        <ul class="flex space-x-14">
+            <li>Home</li>
+            <li>Mentor</li>
+            <li>Meeting</li>
+            <li>Survey</li>
+        </ul>
+    </div>
+    <div>
+        user
+    </div>
 </nav>
