--- a/app/views/shared/_mentor_list.html.erb
+++ b/app/views/shared/_mentor_list.html.erb
@@ -2,15 +2,15 @@
 <% mentors_data.each do |mentor| %>
     <!-- Mentor Block -->
     <div class="mb-8"> <!-- Add margin-bottom for spacing -->
-        <img src="<%= mentor.user.profile_picture %>" alt="Mentor Image">
+        <img src="<%= mentor.profile_picture %>" alt="Mentor Image">
 
-        <h2><%= mentor.user.first_name + " " + mentor.user.last_name %></h2>
-        <h3><%= mentor.user.title %></h3>
+        <h2><%= mentor.first_name + " " + mentor.last_name %></h2>
+        <h3><%= mentor.title %></h3>
         
-        <% mentor.user.skills_array.each do |skill| %>
+        <% mentor.skills_array.each do |skill| %>
             <span><%= skill %></span>
         <% end %>
             
-        <a href="<%= profile_path(mentor.user_id) %>"><strong>View</strong></a>
+        <a href="<%= profile_path(mentor.id) %>"><strong>View</strong></a>
     </div>
 <% end %>
