Removed some unnecessary comments

--- a/app/views/shared/_mentor_list.html.erb
+++ b/app/views/shared/_mentor_list.html.erb
@@ -1,7 +1,6 @@
 <h1>Available Mentors</h1>
 <% mentors_data.each do |mentor| %>
-    <!-- Mentor Block -->
-    <div class="mb-8"> <!-- Add margin-bottom for spacing -->
+    <div class="mb-8">
         <img src="<%= mentor.profile_picture %>" alt="Mentor Image">
 
         <h2><%= mentor.first_name + " " + mentor.last_name %></h2>
