added sign up buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,16 @@
         <div class="gradient gradient-left"></div>
         <div class="gradient gradient-right"></div>
         <h1 class="hero-title text-center w-1/2">
-          Transform <span style="font-style: italic">potential</span> into progress through <span style="font-weight: 700">Mentee</span>
+          Transform potential into progress through <span style="font-weight: 700">MentE</span>
         </h1>
+        <div class="mt-8 flex space-x-4">
+          <button class="bg-gray-900 text-white px-8 py-4 text-3xl rounded-md hover:bg-gray-700 transition">
+            Signup as Mentor
+          </button>
+          <button class="bg-gray-900 text-white px-8 py-4 text-3xl rounded-md hover:bg-gray-700 transition">
+            Signup as Mentee
+          </button>
+        </div>
       </div>
       <div>
         <div class="flex justify-center mt-40 mb-9">
