--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,17 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-  <body class="prose">
-    <div class="container">
-      <div class="row mb-2">
-          <% if notice.present? %>
-            <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
-          <% end %>
-          <% if alert.present? %>
-            <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
-          <% end %>
-      </div>  
+  <body> 
+    <div>
+      <% if notice.present? %>
+        <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+      <% end %>
+      <% if alert.present? %>
+        <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+      <% end %>
+    </div>  
+    <main class="container mx-auto mt-28 px-5 flex justify-center">
       <%= yield %>
-    </div>
+    </main>
   </body>
 </html>
