--- a/app/views/users/registrations/_mentee_form.html.erb
+++ b/app/views/users/registrations/_mentee_form.html.erb
@@ -4,6 +4,7 @@
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: {input_html: {class: "subForm"}}) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
+        <%= f.hidden_field :role, value: 'Mentee' %>
         <%= f.input :email,
                 required: true,
                 autofocus: true,
