--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -5,6 +5,6 @@
   <button data-action="signup#showForm" data-signup-content-param="menteeForm">Mentee</button>
   <div style="margin-top: 5px">
     <div data-signup-target="mentorForm"><%= render partial: "users/registrations/mentor_form" %></div>
-    <div data-signup-target="menteeForm"><%= render partial: "users/registrations/mentee_form", resource: @user %></div>
+    <div data-signup-target="menteeForm"><%= render partial: "users/registrations/mentee_form"%></div>
   </div>
 </div>
