--- a/app/views/users/registrations/_mentor_form.html.erb
+++ b/app/views/users/registrations/_mentor_form.html.erb
@@ -4,7 +4,6 @@
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: {input_html: {class: "subForm"}}) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
-        <%= f.hidden_field :role, value: 'Mentor' %>
         <%= f.input :email,
                 required: true,
                 autofocus: true,
@@ -35,6 +34,10 @@
         <%= f.input :skills_array,
                 required: true %>
       </div>
+      <%= f.simple_fields_for :cohorts do |cm| %>
+        <%= cm.input :capacity, required: true %>
+        <%= cm.hidden_field :role, value: 'Mentor' %>
+      <% end %>
       <div class="form-actions">
         <%= f.button :submit, "Sign up" %>
       </div>
