--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
       <div class="flex flex-col items-center justify-center w-full">
         <div class="gradient gradient-left"></div>
         <div class="gradient gradient-right"></div>
-        <h1 class="hero-title text-center w-1/2">
+        <h1 class="hero-title text-center w-1/2 text-6xl">
           Transform potential into progress through <span style="font-weight: 700">MentE</span>
         </h1>
         <div class="mt-8 flex space-x-4">
