--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
-<nav class="flex flex-wrap items-center justify-between px-24 bg-[#FFFFFF] h-[72px] text-base text-[#000000] font-medium shadow-sm">
+<nav class="flex flex-wrap items-center justify-between px-24 bg-[#FFFFFF] h-[72px] text-base text-[#000000] font-medium shadow-sm fixed top-0 w-full z-20">
     <div>
-        Logo
+      <img src=<%= asset_path('icon/Logo.svg') %> alt="dpi_logo">
     </div>
     <div>
         <ul class="flex space-x-14">
@@ -10,7 +10,8 @@
             <li>Survey</li>
         </ul>
     </div>
-    <div>
-        user
+    <div class="flex gap-6">
+        <img src="<%= asset_path('icon/Notification.svg') %>" alt="notification">
+        <img src="<%= asset_path('sample_img/user_mini_image.png') %>" alt="user_image">
     </div>
 </nav>
