feat: mentee dashboard mentor list card

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -4,11 +4,7 @@
     <h3><%=mentor.user_id%></h3>
   <%end%>
 <% elsif @role == 'mentee' %>
-  <h1>Welcome, Mentee!</h1>
-  <%@mentees_data.each do |mentee|%>
-    <h3><%=mentee.user_id%></h3>
-  <%end%>
-  <!-- Mentee Partial Views Here-->
+  <%= render partial: "mentee_dashboard", locals: {mentors_data: @mentors_data}%>
 <% elsif @role == 'admin' %>
   <h1>Welcome, Admin!</h1>
   <%@admins_data.each do |admin|%>
