--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MentE::DPI Mentorship Platform</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
-
-  <body class="prose">
-    <div class="container">
-      <div class="row mb-2">
-          <% if notice.present? %>
-            <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
-          <% end %>
-          <% if alert.present? %>
-            <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
-          <% end %>
-      </div>  
-      <%= yield %>
-    </div>
-  </body>
+<head>
+  <title>MentE::DPI Mentorship Platform</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
+<body>
+<div>
+  <% if notice.present? %>
+    <%= render partial: "shared/flash", locals: { message: notice, css_class: "success" } %>
+  <% end %>
+  <% if alert.present? %>
+    <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
+  <% end %>
+</div>
+<%= yield %>
+</body>
 </html>
