--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,12 +6,12 @@
     <%= render partial: "shared/cdn_assets" %>
     <title>Landing Page</title>
   </head>
-  <body>
+  <body class="container mx-auto mt-28 px-5 flex justify-center">
     <div class="relative w-[1000px] h-[400px]">
       <div class="flex flex-col items-center justify-center w-full">
         <div class="gradient gradient-left"></div>
         <div class="gradient gradient-right"></div>
-        <h1 class="hero-title text-center w-1/2 text-6xl">
+        <h1 class="hero-title text-center w-1/2 text-6xl mt-24">
           Transform potential into progress through <span style="font-weight: 700">MentE</span>
         </h1>
         <div class="mt-8 flex space-x-4">
