--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="flex flex-wrap items-center justify-center fixed bottom-0 left-0 bg-black h-[46px] w-full">
+<footer class="flex flex-wrap items-center justify-center fixed bottom-0 left-0 bg-black h-[46px] w-full z-20">
     <div class="text-center text-white text-sm font-normal">
         All rights reserved. ©2021-2023 Minders.
     </div>
