--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -1,9 +1,9 @@
 <section class="p-5">
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">Current User:</h1>
-  <h2>Name: <%= @current_user.first_name %></h2>
-  <h2>ID: <%= @current_user.id %></h2>
-  <h2>Cohort: <%= @current_user.cohort %></h2>
-  <h2>Match?: <%= @current_user.matched? %></h2>
+  <h2>Name: <%= current_user.first_name %></h2>
+  <h2>ID: <%= current_user.id %></h2>
+  <h2>Cohort: <%= current_user.cohort %></h2>
+  <h2>Match?: <%= current_user.matched? %></h2>
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">
     <% if @role == "Mentor" %>
       Mentor Profile
