switched to using the current_user and not a test variable

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -54,7 +54,7 @@
         <%end%>
       </b>
       <p class="text-xs text-[#202020] flex-grow"><%= user.bio %></p>
-      <% if @role == "Mentor" && @current_mentee_count < @capacity_cap && @current_user.matched? == false %>
+      <% if @role == "Mentor" && @current_mentee_count < @capacity_cap && current_user.matched? == false %>
         <%= button_to 'Mentorship Request', create_request_profile_path(user.id),
           class: "text-xs bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md 
                   py-2 px-5 mr-auto hover:bg-transparent hover:text-[#202020] hover:border-[#202020]",
