changed li tags to a tags for nav

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,8 +8,8 @@
         <ul class="flex space-x-14">
             <a href="/">Home</a>
             <a href="/dashboard/mentee">Mentor</a>
-            <li>Meeting</li>
-            <li>Survey</li>
+            <a>Meeting</a>
+            <a>Survey</a>
         </ul>
     </div>
     <div class="flex gap-6">
