used .name method on pages

--- a/app/views/dashboard/_profile_card.html.erb
+++ b/app/views/dashboard/_profile_card.html.erb
@@ -3,7 +3,7 @@
     <div class="flex gap-5">
       <img src=<%= asset_path('sample_img/mentor_sample.png') %> alt="mentor_profile_picture" class="size-14 object-cover rounded-lg border">
       <div class="flex flex-col justify-center">
-        <b class="text-lg text-[#202020] font-bold"><%= mentor.first_name %> <%= mentor.last_name %></b>
+        <b class="text-lg text-[#202020] font-bold"><%= mentor.name %></b>
         <p class="text-xs text-[#202020] mb-2.5"><%= mentor.title %></p>
       </div>
     </div>
