--- a/app/views/shared/_mentor_list.html.erb
+++ b/app/views/shared/_mentor_list.html.erb
@@ -3,7 +3,7 @@
     <div class="mb-8">
         <img src="<%= mentor.profile_picture %>" alt="Mentor Image">
 
-        <h2><%= mentor.first_name + " " + mentor.last_name %></h2>
+        <h2><%= mentor.name %></h2>
         <h3><%= mentor.title %></h3>
         
         <% mentor.skills_array.each do |skill| %>
