--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -7,7 +7,7 @@
   </p>
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
     <% mentors_data.each do |mentor| %>
-    <%# TODO: Please refactor (might need to modify user model method) %>
+    <%# TODO: Refactor (might need to modify user method model) %>
       <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort) %>
       <% capacity_cap = mentor.capacity %>
       <% if  current_mentee_count < capacity_cap %>
