--- a/app/views/users/registrations/_mentor_form.html.erb
+++ b/app/views/users/registrations/_mentor_form.html.erb
@@ -37,6 +37,7 @@
       <%= f.simple_fields_for :cohorts, CohortMember.new do |cm| %>
         <%= cm.input :capacity, required: true %>
         <%= cm.hidden_field :role, value: 'Mentor' %>
+        <%= cm.hidden_field :cohort_id, value: 1 %>
       <% end %>
       <div class="form-actions">
         <%= f.button :submit, "Sign up" %>
