--- a/app/views/users/registrations/_mentee_form.html.erb
+++ b/app/views/users/registrations/_mentee_form.html.erb
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <h3>Mentor</h3>
+    <h3>Mentee</h3>
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), defaults: {input_html: {class: "subForm"}}) do |f| %>
       <%= f.error_notification %>
       <div class="form-inputs">
