--- a/app/views/users/registrations/_mentee_form.html.erb
+++ b/app/views/users/registrations/_mentee_form.html.erb
@@ -32,7 +32,7 @@
         <%= f.input :profile_picture,
                 required: true %>
         <%= f.input :skills_array,
-                required: true %>
+                required: true, multiple: true %>
       </div>
       <%= f.simple_fields_for :cohorts, CohortMember.new do |cm| %>
         <%= cm.hidden_field :capacity, value: nil %>
