added nav spacing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,11 @@
         <%= render partial: "shared/flash", locals: { message: alert, css_class: "danger" } %>
       <% end %>
     </div>
+    <div class="mt-[75px]">
+
     <%= yield %>
+
+    </div>
     
     <%= render partial: "shared/footer" %>
   </body>
