--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="fixed top-0 left-0 w-full mb-10 z-50 bg-white shadow-sm h-20 px-20">
+<nav class="fixed top-0 left-0 w-full mb-10 z-50 bg-white shadow-sm h-20 px-20 text-base">
   <div class="flex items-center justify-between px-30 h-full">
     <div>
       <img src="<%= asset_path("icon/Logo.svg") %>" alt="DPI Logo" class="h-12">
