--- a/app/views/users/registrations/_mentee_form.html.erb
+++ b/app/views/users/registrations/_mentee_form.html.erb
@@ -34,7 +34,7 @@
         <%= f.input :skills_array,
                 required: true, multiple: true %>
       </div>
-      <%= f.simple_fields_for :cohorts, CohortMember.new do |cm| %>
+      <%= f.simple_fields_for :cohort_members, CohortMember.new do |cm| %>
         <%= cm.hidden_field :capacity, value: nil %>
         <%= cm.hidden_field :role, value: 'Mentee' %>
         <%= cm.hidden_field :cohort_id, value: Cohort.first.id %>
